force-app/main/default/objects/Audit_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Audit_Instructions__c</fullName>
        <label>Audit Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Department_10__c</fullName>
        <label>Department 10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_11__c</fullName>
        <label>Department 11</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_12__c</fullName>
        <label>Department 12</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Expectations_10__c</fullName>
        <label>Dept. Expectations 10</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dept_Expectations_11__c</fullName>
        <label>Dept. Expectations 11</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dept_Expectations_12__c</fullName>
        <label>Dept. Expectations 12</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <formula>Id</formula>
        <label>Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Picklist_Store__c</fullName>
        <label>Source Picklist (Store)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Stores</valueSetName>
        </valueSet>
    </fields>
    <label>Audit Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Audit Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>